--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,17 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.apicatalog</groupId>
-    <artifactId>ed25519-signature-2020</artifactId>
+    <artifactId>linked-data-signature</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Ed25519 Signature Suite 2020</name>
+    <name>Linked Data Signature</name>
 
     <description>
-        Ed25519 Signature Suite 2020 for the Linked Data Proof specification
+       Linked Data Signature and Ed25519 Signature Suite 2020
     </description>
 
-    <url>https://github.com/filip26/ed25519-signature-2020</url>
+    <url>https://github.com/filip26/linked-data-signature</url>
     
     <licenses>
         <license>
@@ -24,13 +24,13 @@
    
     <issueManagement>
         <system>github</system>
-        <url>https://github.com/filip26/ed25519-signature-2020/issues</url>
+        <url>https://github.com/filip26/linked-data-signature/issues</url>
     </issueManagement>
     
     <scm>
-        <connection>scm:git:git://github.com/filip26/ed25519-signature-2020.git</connection>
-        <developerConnection>scm:git:git://github.com/filip26/ed25519-signature-2020.git</developerConnection>
-        <url>https://github.com/filip26/ed25519-signature-2020/tree/main</url>
+        <connection>scm:git:git://github.com/filip26/linked-data-signature.git</connection>
+        <developerConnection>scm:git:git://github.com/filip26/linked-data-signature.git</developerConnection>
+        <url>https://github.com/filip26/linked-data-signature/tree/main</url>
     </scm>
 
     <developers>
@@ -45,8 +45,8 @@
     <inceptionYear>2022</inceptionYear>
 
     <properties>
-        <maven.compiler.target>15</maven.compiler.target>
-        <maven.compiler.source>15</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
 
         <envSources>src/main/java15</envSources>
 
